@@ -550,6 +550,9 @@
 
       \item Unserialization of raw vectors serialized in ASCII
       representation now works correctly.
+
+      \item \code{<data frame>[TRUE, <new>] <- list(c1, c2)} now works
+      correctly, thanks to Emil Bode's patch in \PR{17504}.
     }
   }
 }
